# KnowledgeBase

./: .gitignore  AI.md  Architecture.md  Blender.md  CONTRIBUTING.md  CONTRIBUTORS.md  CanvasGraphics.md  Communication.md  Finance.md  GameDevelopment.md  General.md  Goals.md  ImageProcessing.md  Index.md  Python.md  README.md  Software Testing.md  TO DO.md  TODO.md  ToLearn.md  Web.md  WebDevelopment.md  WebsitesCollection.md  temp.md  ventures.md
.obsidian/: graph.json  workspace-mobile.json  workspace.json
AI/: AI.md  Frameworks.md  OpensourceProjects.md
Learning/: AI.md  Architecture.md  Ask.md  Clean_Code.md  Communication.md  Devops.md  Finance.md  TODO.md  (+7 more)
chatbot/server/: pyproject.toml
chatbot/server/app/: config.py  main.py  mcp_server.py
chatbot/server/app/api/v1/endpoints/: chat_with_knowledge_base.py  socket.py  solution_builder.py
chatbot/server/app/api/v1/models/: chat_with_knowledge_base.py  solution_builder.py
chatbot/server/app/functions/: chat_with_knowledge_base.py  solution_builder.py
chatbot/server/app/llm/: gemini.py
chatbot/server/app/notebooks/: embed_docs.ipynb
chatbot/server/app/prompts/: chat_with_knowledge_base.py
chatbot/server/scripts/: update_embeddings.py
chatbot/server/static/: asset-manifest.json  decision_tree.json  index.html
chatbot/server/static/css/: main.d9938745.css  main.d9938745.css.map
chatbot/server/static/js/: main.07e864a6.js  main.07e864a6.js.map  main.375e5bca.js  main.589866ae.js  main.68d1581b.js  main.68d1581b.js.map  main.6a8686a0.js  main.6a8686a0.js.map  main.98f47b36.js  main.a7a27ca3.js
(+113 files in other folders)
