[project]
name = "chatbot"
version = "0.1.0"
description = "A chatbot that uses AI to answer questions from my knowledge base"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "gitpython>=3.1.44",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "mcp>=1.6.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]
test = ["pytest>=8.2.2,<9"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
